--- a/content/blog/2019-12-14-python-blog.Rmd
+++ b/content/blog/2019-12-14-python-blog.Rmd
@@ -40,7 +40,7 @@ I was able to use R in order to call in the data that I will be using, then with
 
 ---
 
-## Regular Expression
+## Regular Expression:
 
 Regular expression can be used in order to search through a large paragraph or chunk of information and find specific patterns that you are looking for. It utilizes symbols with different meanings in order to search through large pieces of infomation and only yield matches in the output. A chart with some f these symbols and meanings are shown below:
 
@@ -51,11 +51,45 @@ This can be done with the function re.findall(). For the example below, there ar
 
 ![](/blog/2019-12-14-python-blog_files/python3.PNG){width=700px height=700px}
 
-
+Regular expression can also be really useful when searching through sequences of DNA, RNA, or even protein. You can use Regex to search for genes of interests or even gather segments from various sequences and compare them to one another. This would be useful to find mutations, deletions, or insertions.
 
 ---
 
-## 
+## Python Bioinformatics:
+
+When analyzing two or more sequences of DNA, RNA, or even protein, we tend to search for similarities and differences and run experiments on those characteristics to test hypotheses. Sequence alignment involves arranging those sequences against one another in order to search for matches, mismatches, and gaps. For example, when looking at DNA and determining whether two or more organisms have a common ancestor, points of divergence can be traced by finding whether the organisms share similar gaps and mismatches. There are two types of alignments that I learned, global and local. Global alignment
+
+```{python}
+import numpy as np
+
+def match_fun(a,b):  # Helper function to define match/mismatch scores
+    if a==b:
+        score=2 #match score
+    else:
+        score=-1 #mismatch score
+    return score
+
+def needleman(seq1,seq2,gap_penalty=-1):       # Needleman-Wunsch algorithm in a function
+    m=len(seq1) #length of horizontal sequence
+    n=len(seq2) #length of vertical sequence
+    score=np.empty(shape=[n+1,m+1]) #array to hold scores
+    for j in range(0, m + 1): score[0][j] = gap_penalty * j
+    for i in range(0, n + 1): score[i][0] = gap_penalty * i
+    for i in range(1, n + 1): 
+        for j in range(1, m + 1):
+            insert = score[i - 1][j] + gap_penalty 
+            delete = score[i][j - 1] + gap_penalty 
+            match = score[i - 1][j - 1] + match_fun(seq1[j-1], seq2[i-1])
+            score[i][j] = max(match, delete, insert)
+    return score
+
+x1="CCAGT"
+x2="ACAAGT"
+
+mat=needleman(x2,x1)
+mat
+
+```
 
 
 
