--- a/public/blog/2019-12-14-python-blog.Rmd
+++ b/public/blog/2019-12-14-python-blog.Rmd
@@ -91,5 +91,33 @@ mat
 
 ```
 
+```{python}
+import numpy as np
 
+def match_fun(a,b):  # Helper function to define match/mismatch scores
+    if a==b:
+        score=2 #match score
+    else:
+        score=-1 #mismatch score
+    return score
+
+def sw_fun(seq1,seq2,gap_penalty=-1):       # Needleman-Wunsch algorithm in a function
+    m=len(seq1) #length of horizontal sequence
+    n=len(seq2) #length of vertical sequence
+    score=np.empty(shape=[n+1,m+1]) #array to hold scores
+    for j in range(0, m + 1): score[0][j] = 0
+    for i in range(0, n + 1): score[i][0] = 0
+    for i in range(1, n + 1): 
+        for j in range(1, m + 1):
+            insert = score[i - 1][j] + gap_penalty 
+            delete = score[i][j - 1] + gap_penalty 
+            match = score[i - 1][j - 1] + match_fun(seq1[j-1], seq2[i-1])
+            score[i][j] = max(match, delete, insert,0)
+    return score
+
+x1="CCAGT"
+x2="ACAAGT"
+
+sw_fun(x2,x1)
+```
 
